# calculator-hs

./: .gitignore  LICENSE  README.md  calculator-hs.cabal  hie.yaml  stack.yaml
app/: CalcDefs.hs  CalcInterpreter.hs  CalcIntrinsics.hs  CalcLexer.hs  CalcParser.hs  CalcParserNew.hs  Main.hs
tests/: fib.ma  std.ma
