cabal-version:      2.4
name:               calculator-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             J4n1X
maintainer:         eicherjanick@gmail.com


executable calculator-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: CalcDefs CalcParser CalcLexer CalcInterpreter

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      parsec ^>= 3.1.15.1,
                      mtl >= 2.1.3,
                      haskeline >= 0.8.2,
                      lens ^>=5.2
    hs-source-dirs:   app
    default-language: Haskell2010
